--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,7 +5,7 @@ layout: default
     <div class="col l7">
         <div class="row">
             <div class="col">
-                {% include sections/about.html %}        
+                {% include sections/info.html %}        
             </div>
         </div>
         
