--- a/_includes/sections/info.html
+++ b/_includes/sections/info.html
@@ -1,6 +1,6 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
 <div>
-    이름 : 김민송
-    회사 : NHN Entertainment
+    <h2>이름 : 김민송</h2>
+    <h2>회사 : NHN Entertainment</h2>
 </div>
