--- a/_includes/sections/info.html
+++ b/_includes/sections/info.html
@@ -1,7 +1,7 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
 <div>
-    이름 : 김민송<br>
-    생년월일 : 1995.04.16<>
-    회사 : NHN Entertainment
+    <h2>이름 : 김민송</h2><br>
+    <h2>생년월일 : 1995.04.16</h2><br>
+    <h2>회사 : NHN Entertainment</h2>
 </div>
