--- a/_includes/sections/info.html
+++ b/_includes/sections/info.html
@@ -1,5 +1,5 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
-<div><h2>이름 : 김민송</h2> </div>
-<div><h2>생년월일 : 1995.04.16 </h2></div>
-<div><h2>회사 : NHN Entertainment </h2></div>
+<p><font size="2">이름 : 김민송</font> </p>
+<p><font size="2">생년월일 : 1995.04.16 </font></p>
+<p><font size="2">회사 : NHN Entertainment </font></p>
