--- a/_includes/sections/info.html
+++ b/_includes/sections/info.html
@@ -1,5 +1,3 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
-<p><font size="2">이름 : 김민송</font> </p>
-<p><font size="2">생년월일 : 1995.04.16 </font></p>
-<p><font size="2">회사 : NHN Entertainment </font></p>
+<div>이름 : 김민송<br>생년월일 : 1995.04.16<br>회사 : NHN Entertainment </div>
