--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,7 +50,7 @@
 
   <!-- Icons -->
   <!-- 16x16 -->
-  <link rel="shortcut icon" href="{{ site.url }}/flower.png">
+  <link rel="shortcut icon" href="{{ site.url }}/flower.PNG">
   <!-- 32x32 -->
-  <link rel="shortcut icon" href="{{ site.url }}/flower.png">
+  <link rel="shortcut icon" href="{{ site.url }}/flower.PNG">
 </head>
